chart2/source/view/main/OpenGLRender.cxx
@@ -87,7 +87,7 @@ GLfloat texCoords[] = {
 int OpenGLRender::InitOpenGL()
 {
     glEnable(GL_TEXTURE_2D);
-    glEnable(GL_CULL_FACE);
+    glDisable(GL_CULL_FACE);
     glCullFace(GL_BACK);
     glPolygonMode(GL_FRONT_AND_BACK, GL_FILL);
     // Enable depth test
@@ -107,7 +107,8 @@ int OpenGLRender::InitOpenGL()
     glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
 
     //Init the Projection matrix
-    m_Projection = glm::ortho(0.f, float(m_iWidth), 0.f, float(m_iHeight), -1.f, 1.f);
+    m_Projection = glm::ortho(0.f, float(m_iWidth), -float(m_iHeight), 0.f, -1.f, 1.f);
+    m_Projection = m_Projection * glm::scale(1.0f, -1.0f, 1.0f);
     m_View       = glm::lookAt(glm::vec3(0,0,1), // Camera is at (4,3,-3), in World Space
                                glm::vec3(0,0,0), // and looks at the origin
                                glm::vec3(0,1,0)  // Head is up (set to 0,-1,0 to look upside-down)
@@ -356,7 +357,8 @@ void OpenGLRender::SetSize(int width, int height)
 {
     m_iWidth = width;
     m_iHeight = height;
-    m_Projection = glm::ortho(0.f, float(m_iWidth), 0.f, float(m_iHeight), -4.f, 3.f);
+    m_Projection = glm::ortho(0.f, float(m_iWidth), -float(m_iHeight), 0.f, -4.f, 3.f);
+    m_Projection = m_Projection * glm::scale(1.0f, -1.0f, 1.0f);
 }
 
 void OpenGLRender::SetLine2DColor(sal_uInt8 r, sal_uInt8 g, sal_uInt8 b, sal_uInt8 nAlpha)
